[package]
name = "vcl-protocol"
version = "0.2.0"
edition = "2021"
description = "Cryptographically chained packet transport protocol with SHA-256 integrity, Ed25519 signatures, and XChaCha20-Poly1305 encryption"
license = "MIT"
repository = "https://github.com/ultrakill148852-collab/vcl-protocol"
authors = ["ultrakill148852-collab"]
keywords = ["crypto", "networking", "blockchain", "udp", "secure"]
categories = ["cryptography", "network-programming"]
readme = "README.md"

[dependencies]
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
hex = "0.4"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
