[package]
name = "vcl-protocol"
version = "1.1.0"
edition = "2021"
description = "Cryptographically chained packet transport protocol with SHA-256 integrity, Ed25519 signatures, and XChaCha20-Poly1305 encryption"
license = "MIT"
repository = "https://github.com/ultrakill148852-collab/vcl-protocol"
authors = ["ultrakill148852-collab"]
keywords = ["crypto", "networking", "vpn", "udp", "secure"]
categories = ["cryptography", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/vcl-protocol"

[dependencies]
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tun = { version = "0.6", features = ["async"] }
etherparse = "0.14"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vcl_benchmarks"
harness = false
