[package]
name = "vcl-protocol"
version = "1.6.0"
edition = "2021"
description = "Cryptographically chained packet transport protocol with SHA-256 integrity, Ed25519 signatures, XChaCha20-Poly1305 encryption, QUIC support, and cross-platform TUN"
license = "MIT"
repository = "https://github.com/ultrakill148852-collab/vcl-protocol"
authors = ["ultrakill148852-collab"]
keywords = ["crypto", "networking", "vpn", "quic", "wintun"]
categories = ["cryptography", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/vcl-protocol"

[features]
default = ["ws"]
ws = ["dep:tokio-tungstenite"]
quic = ["dep:quinn", "dep:rustls", "dep:rcgen"]
pq = ["dep:pqcrypto-kyber", "dep:pqcrypto-traits"]
# wintun feature removed — target-specific deps are auto-included on Windows

[dependencies]
# Cryptography
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Post-Quantum (Optional)
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

# Async Runtime & Networking
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = "0.3"

# QUIC Support (Optional)
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
rcgen = { version = "0.13", optional = true }

# Serialization & Logging
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing (for vcl-cli binary)
clap = { version = "4.5", features = ["derive", "env"] }

# System & Utilities
tun = { version = "0.7", features = ["async"] }
etherparse = "0.15"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Windows TUN Support (auto-included on Windows)
[target.'cfg(windows)'.dependencies]
wintun = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vcl_benchmarks"
harness = false

[[bin]]
name = "vcl-cli"
path = "src/bin/vcl-cli.rs"
